src/sass/style.scss
* {
  box-sizing: border-box;
}

/************************/
/*GENERAL*/
/************************/
body {
  font-family: 'Varela Round', sans-serif;
  color: #666;
  margin: 0;
  padding: 0;
}

h1 {
  font-size: 2.5em;

  @media (min-width: 400px) {
    font-size: 3.5em;
  }

  @media (min-width: 550px) {
    font-size: 4.5em;
  }
}

h2 {
  text-align: center;
  font-size: 2.5em;

  @media (min-width: 400px) {
    font-size: 3em;
  }

  @media (min-width: 550px) {
    font-size: 3.5em;
  }
}

/************************/
/*CUSTOM PARALLAX IMAGE*/
/************************/
.cg-parallax {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-image: url('../images/nature-pic-7.jpg');
  background-repeat: no-repeat;
  background-size: cover;
  opacity: 0.5;
}

//import partials
@import './partials/hamburger';
@import './partials/titlestar';
@import './partials/header';
@import './partials/portfoliocard';
@import './partials/logo';
@import './partials/registerlogin';
@import './partials/forms';
@import './partials/owlcarousel';
@import './partials/about';
@import './partials/footer';

/*#fd7d5f*/
/*#0099ff*/

